--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -6,6 +6,8 @@ $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
+$font-family-roboto: 'Roboto', sans-serif;
+
 // Colors
 $blue: #3490dc;
 $indigo: #6574cd;
@@ -29,6 +31,3 @@ $naranja_2: #F78140;
 $crema_1:#E8E7E4;
 $crema_2:#ACABAB;
 $crema_3:#F6F6F6;
-
-
-
